--- a/package.json
+++ b/package.json
@@ -3,12 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.7",
+    "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.16.11",
+    "aos": "^2.3.4",
+    "axios": "^0.21.1",
+    "formik": "^2.2.9",
+    "moment": "^2.29.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-simple-widgets": "^5.0.1",
+    "react-spinners": "^0.11.0",
+    "react-stripe-checkout": "^2.6.3",
+    "sweetalert2": "^11.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +46,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
